cmake_minimum_required(VERSION 3.30)
project(LeetCode_c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(LeetCode_c__
        "338. Counting Bits.cpp"
        "342. Power of Four.cpp"
        "344. Reverse String.cpp"
        "345. Reverse Vowels of a String.cpp"
        "441. Arranging Coins.cpp"
        "448. Find All Numbers Disappeared in an Array.cpp"
        "461. Hamming Distance.cpp"
        "459. Repeated Substring Pattern.cpp"
        "476. Number Complement.cpp"
        "485. Max Consecutive Ones.cpp"
        "492. Construct the Rectangle.cpp"
        "506. Relative Ranks.cpp"
        "520. Detect Capital .cpp"
        "709. To Lower Case.cpp"
        "717. 1-bit and 2-bit Characters.cpp"
        "628. Maximum Product of Three Numbers.cpp"
        "605. Can Place Flowers.cpp"
        "561. Array Partition.cpp"
        "563. Binary Tree Tilt.cpp"
        "566. Reshape the Matrix.cpp"
        "724. Find Pivot Index.cpp"
        "746. Min Cost Climbing Stairs.cpp"
        "69. Sqrt(x).cpp"
        "88. Merge Sorted Array.cpp")
